# hyper-resource-sanic-2

./: .env  local.db  pyproject.toml  settings.py
doc/: mapping.asta
generator/: all_models.py  all_models1.py  all_models2.py  all_models3.py  all_models4.py  generate_all_files.py  generate_all_files_2.py  generate_model_files.py  generate_model_sqlalchemy.py  generate_static.py  generator_context.py  generator_resource.py  generator_route.py  pre_generator.py  util.py
generator/templates/: geo_template.html  index_template.py  nongeo_template.html  resource_template.py
src/: aiohttp_client.py  index.py
src/contexts/: aglomerado_rural_isolado_p.py  aldeia_indigena_p.py  banco_areia_a.py  barragem_l.py  brejo_pantano_a.py  capital_p.py  cidade_p.py  corredeira_l.py  curva_batimetrica_l.py  duna_a.py  edif_agropec_ext_vegetal_pesca_p.py  edif_const_aeroportuaria_p.py  edif_pub_militar_a.py  edif_pub_militar_p.py  elemento_fisiografico_natural_l.py  est_gerad_energia_eletrica_p.py  ext_mineral_a.py  gasto.py  grupo.py  hidreletrica_p.py  ilha_a.py  local_residencia.py  massa_dagua_a.py  municipio_pib.py  pais_a.py  pessoa_grupo.py  pico_p.py  pista_ponto_pouso_p.py  ponte_l.py  ponto_cotado_altimetrico_p.py  ponto_cotado_batimetrico_p.py  queda_dagua_l.py  recife_a.py  rocha_em_agua_a.py  sumidouro_vertedouro_p.py  termeletrica_p.py  terra_indigena_a.py  terra_indigena_p.py  (+12 more)
tests/: test_alchemy_base.py  test_async_connection.py  test_async_db_connection.py  test_context.py  test_database_postgresql.py  test_expression.py  test_feature_collection.py  test_filter_expression.py  test_interpreter_new.py  test_models.py  test_requests.py  test_saquery_builder.py  test_sum.py  tests.txt
(+299 files in other folders)
